<resources>
    <string name="app_name">Jibam</string>
    <string name="expenses">Expenses</string>
    <string name="income">Income</string>
    <string name="create_new_transaction">Create New Transaction</string>
    <string name="yesterday">Yesterday</string>
    <string name="cash">Cash</string>
    <string name="with">With</string>
    <string name="select_category">Select category</string>
    <string name="money">Money</string>
    <string name="note">Note</string>
    <string name="total_balance">Total</string>
    <string name="zero">0</string>
    <string name="price">Price</string>
    <string name="wallet">Wallet</string>
    <string name="category">Category</string>
    <string name="bottom_sheet_behavior" translatable="false">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="date">Date</string>
    <string name="memo">Memo</string>
    <string name="details">Details</string>
    <string name="add_transaction">Add Transaction</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="are_you_sure_delete_category">"Are You sure you want to delete this category?"</string>
    <string name="text_success">Success</string>
    <string name="text_ok">OK</string>
    <string name="text_error">Error</string>
    <string name="text_info">Info</string>
    <string name="text_cancel">Cancel</string>
    <string name="text_yes">yes</string>
    <string name="are_you_sure_delete">Are you sure you want to delete this transaction?</string>
    <string name="snack_bar_delete_text">Are you sure you want to delete this transaction?</string>
    <string name="snack_bar_undo">Undo</string>
    <string name="add_new_category">Add new category</string>
    <string name="now">Now</string>
    <string name="search">Search</string>
    <string name="category_setting">Category setting</string>
    <string name="about">About us</string>
    <string name="rate_us">Rate Us</string>
    <string name="setting">Setting</string>
    <string name="chart">Chart</string>
    <string name="add_expenses_category">Add expenses category</string>
    <string name="add_income_category">Add income category</string>
    <string name="unable_to_recognize_category_type">Unable to recognize category type</string>
    <string name="jibam">Jibam</string>
    <string name="jibam_capital">JIBAM</string>
    <string name="pls_select_category">Please select category</string>
    <string name="money_shouldnt_be_negative">money should be grater then 0</string>
    <string name="pls_insert_some_money">Please insert some money</string>
    <string name="pls_insert_valid_amount_of_money">
        Please insert valid money.
        Inserted money should not be zero or negative
    </string>
    <string name="transactions">Transactions</string>
    <string name="food">food</string>
    <string name="hamburger">hamburger</string>
    <string name="vegetables">vegetables</string>
    <string name="fruits">fruits</string>
    <string name="transportation">transportation</string>
    <string name="shopping">shopping</string>
    <string name="sport">sport</string>
    <string name="social">social</string>
    <string name="baby">baby</string>
    <string name="entertainment">entertainment</string>
    <string name="clothing">clothing</string>
    <string name="beauty">beauty</string>
    <string name="telephone">telephone</string>
    <string name="home">Home</string>
    <string name="pet">pet</string>
    <string name="bills">bills</string>
    <string name="electronics">electronics</string>
    <string name="dairy_product">dairy product</string>
    <string name="dried_fruits">dried fruits</string>
    <string name="snacks">snacks</string>
    <string name="travel">travel</string>
    <string name="book">book</string>
    <string name="education">education</string>
    <string name="health">health</string>
    <string name="gift">gift</string>
    <string name="office">office</string>
    <string name="insurance">insurance</string>
    <string name="car">car</string>
    <string name="tax">tax</string>
    <string name="salary">salary</string>
    <string name="awards">awards</string>
    <string name="grants">grants</string>
    <string name="sale">sale</string>
    <string name="rental">rental</string>
    <string name="refunds">refunds</string>
    <string name="coupons">coupons</string>
    <string name="lottery">lottery</string>
    <string name="dividends">dividends</string>
    <string name="investments">investments</string>
    <string name="others">others</string>
    <string name="Education">Education</string>
    <string name="Electronics">Electronics</string>
    <string name="Entertainment">Entertainment</string>
    <string name="Family">Family</string>
    <string name="Finance">Finance</string>
    <string name="Food">Food</string>
    <string name="Income">Income</string>
    <string name="Medical">Medical</string>
    <string name="Personal">Personal</string>
    <string name="Shopping">Shopping</string>
    <string name="Transportation">Transportation</string>
    <string name="Work">Work</string>
    <string name="testing_string">it just for testing</string>
    <string name="category_name">Category name</string>
    <string name="UNKNOWN_CATEGORY">Unknown category</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_0">0</string>
    <string name="_00">00</string>
    <string name="developement_title">Jibam is Developed By</string>
    <string name="developement_members">
    Developer
    \n Seyed mahdi hosseinnion
    \n
    \n Logo designer
    \n Amir hossein taherian
    </string>
    <string name="about_app">
        Jibam is an android application that helps you track your financial activity efficiently.
        With this application, you could save more money.
    </string>
    <string name="version1">Version: %s</string>
    <string name="unable_to_get_date">Unable to save the date please try again!</string>
    <string name="fab_tap_target_primary">Create your first transaction</string>
    <string name="fab_tap_target_secondary">"Tap to create your first transaction</string>
    <string name="summery_money_tap_target_primary">Sum of income, expenses and total for this month</string>
    <string name="month_manager_tap_target_primary">Tap to change month</string>
    <string name="edt_money_tap_target_primary">Insert amount of money for transaction</string>
    <string name="edt_money_tap_target_secondary">You can use calculator</string>
    <string name="date_tap_target_primary">Set date and time for transaction</string>
    <string name="date_tap_target_secondary">Tap on date or time to change them</string>
    <string name="note_tap_target_primary">Write some note here</string>
    <string name="category_fab_tap_target_primary">Selected  category</string>
    <string name="category_fab_tap_target_secondary">You can change it by tap on it</string>
    <string name="category_list_tap_target_primary">"Select category"</string>
    <string name="category_list_tap_target_secondary">"Select one of categories"</string>
    <string name="category_bottom_sheet_tap_target_primary">"Select category"</string>
    <string name="category_bottom_sheet_tap_target_secondary">Select category for transaction</string>
    <string name="view_category_tap_target_primary">"Edit category"</string>
    <string name="view_category_tap_target_secondary">
        Tap on trash icon to delete category
        Tap on reorder icon or hold on item to reorder
    </string>
    <string name="transaction_successfully_inserted">Transaction successfully inserted</string>
    <string name="transaction_error_inserted">Unable to insert transaction</string>
    <string name="transaction_successfully_updated">"Transaction successfully updated"</string>
    <string name="transaction_error_updated">Unable to update transaction</string>
    <string name="transaction_successfully_deleted">"Transaction successfully deleted"</string>
    <string name="transaction_error_deleted">"Unable to delete transaction"</string>
    <string name="getting_all_categories_error">"Unable to get categories"</string>
    <string name="category_successfully_deleted">Category successfully deleted</string>
    <string name="category_error_deleted">Unable to delete category something went wrong</string>
    <string name="category_successfully_inserted">Category successfully inserted</string>
    <string name="category_error_inserted">Unable to insert category something went wrong</string>
    <string name="category_pinned">Category pinned</string>
    <string name="no_result_found_for_this_search">NO RESULT FOUND FOR THIS SEARCH</string>
    <string name="insert_some_transaction_with_add_button">
        No Transaction
        \n
        Tap + to add one
    </string>
    <string name="language">Language</string>
    <string name="system_default">System Default (Recommended)</string>
    <string name="farsi">فارسی</string>
    <string name="english">English</string>
    <string name="changelanugaealart">Change app language cause app to restart</string>
    <string name="no_transaction_found_with_this_category">There is no transaction with this category!</string>
    <string name="no_chart_data_available">No chart data available.</string>
    <string name="income_chart_title">Income chart</string>
    <string name="expenses_chart_title">Expenses chart</string>
    <string name="swap_chart">SWAP CHART</string>
    <string name="delete">Delete</string>
    <string name="unable_to_recognize_this_transaction">Unable to recognize this transaction to delete it</string>
    <string name="are_you_sure_delete_transaction">"Are you sure you want to delete this transaction?"</string>
    <string name="month">""</string>
    <string name="confirm">Confirm</string>
    <string name="skip">SKIP</string>
    <string name="done">DONE</string>
    <string name="app_intro_slide_0_title">Jibam is your new Financial Assistant</string>
    <string name="app_intro_slide_0_description">Track your financial activity and save more money</string>
    <string name="app_intro_slide_1_title">Convenient tracking</string>
    <string name="app_intro_slide_1_description">Track your financial activity in just a few second</string>
    <string name="app_intro_slide_2_title">Practical graph</string>
    <string name="app_intro_slide_2_description">Know where your money goes with categories</string>
    <string name="unable_to_delete_no_transaction_found">
        Unable to delete this transaction\nNo transaction found
    </string>
    <string name="edit_transaction">Edit transaction</string>
    <string name="update">Update</string>
    <string name="save">Save</string>
    <string name="no_transaction_found">No transaction found</string>
    <string name="unknown_category_type">Unknown category type</string>
    <string name="you_changes_have_not_saved">Your changes have not been saved</string>
    <string name="discard">Discard</string>
    <string name="unable_to_restore_transaction">Unable to restore deleted transaction</string>
    <string name="back_to_current_month">Back to current month</string>
    <string name="no_setting">no setting</string>
    <string name="Farvardin">Farvardin</string>
    <string name="Ordibehesht">Ordibehesht</string>
    <string name="Khordad">Khordad</string>
    <string name="Tir">Tir</string>
    <string name="Mordad">Mordad</string>
    <string name="today">Today</string>
    <string name="money_">Money:</string>
    <string name="memo_">Memo:</string>
    <string name="date_">Date:</string>
    <string name="category_">Category:</string>
</resources>