<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">


    <item
        android:id="@+id/viewCategoriesFragment"
        android:icon="@drawable/ic_cat_food"
        android:iconTint="@color/black"
        android:title="@string/category_setting" />
    <item
        android:id="@+id/settingFragment"
        android:icon="@drawable/ic_cat_education"
        android:iconTint="@color/black"
        android:title="@string/setting" />
    <item
        android:id="@+id/rate_us"
        android:icon="@drawable/ic_cat_entertainment"
        android:iconTint="@color/black"
        android:title="@string/rate_us" />
    <item
        android:id="@+id/about"
        android:icon="@drawable/ic_cat_car"
        android:iconTint="@color/black"
        android:title="@string/about" />
</menu>