<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".ui.main.transaction.AddTransactionFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_margin="4dp"
                android:hint="@string/price">
                <!--            app:startIconDrawable="@drawable/ic_launcher_foreground">-->

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_money"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="10"
                    android:inputType="number" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_margin="4dp"
                android:hint="@string/category">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_category"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center|start"
                    android:layout_weight="10"
                    android:clickable="true"
                    android:focusable="true"
                    android:gravity="center|start"
                    android:inputType="none"
                    android:text="@string/select_category"
                    android:textSize="18sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_margin="4dp"

                android:hint="@string/write_note">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_memo"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="10"

                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_margin="4dp"

                android:hint="@string/write_note">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_date"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"

                    android:layout_gravity="center|start"
                    android:layout_weight="10"
                    android:clickable="true"
                    android:focusable="true"
                    android:gravity="center|start"
                    android:text="@string/today"
                    android:textSize="16sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txtField_wallet"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_margin="4dp"
                android:hint="@string/wallet">

                <AutoCompleteTextView
                    android:id="@+id/edt_wallet"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center|start"
                    android:gravity="center|start"
                    android:inputType="none"
                    android:textSize="16sp"

                    />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_margin="4dp"

                android:hint="@string/with">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_with"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>


    </ScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:layout_gravity="end|bottom"
        android:contentDescription="yep"
        android:layout_margin="16dp"
        android:id="@+id/fab_insertTransaction"
        app:srcCompat="@drawable/ic_check_green_24dp" />
</androidx.coordinatorlayout.widget.CoordinatorLayout>