<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_gray"
    android:orientation="vertical"
    tools:context=".ui.main.transaction.DetailTransFragment">
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/fragment_detail_toolbar_main"
            android:layout_width="match_parent"
            android:layout_height="@dimen/mtrl_toolbar_default_height"
            android:background="@color/purple_500" />
    <ScrollView

        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        card_view:cardBackgroundColor="@color/white"
        card_view:cardCornerRadius="8dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.cardview.widget.CardView
                android:id="@+id/image_cardView"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:foregroundGravity="center"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                card_view:cardBackgroundColor="#D297EA"
                card_view:cardCornerRadius="24dp">

                <ImageView
                    android:id="@+id/category_image_detail"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:padding="14dp"
                    android:scaleType="center" />
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/category_name_detail"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:gravity="start|center"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@id/image_cardView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/image_cardView"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0"
                tools:text="Food" />

            <TextView
                android:id="@+id/txt_money"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:foregroundGravity="center"

                android:gravity="center"
                android:text="@string/money"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="@+id/edt_money_detail"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/image_cardView" />

            <EditText
                android:id="@+id/edt_money_detail"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:foregroundGravity="center"
                android:gravity="start|center"
                android:inputType="number"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/txt_money"
                app:layout_constraintTop_toBottomOf="@+id/image_cardView" />

            <TextView
                android:id="@+id/txt_memo_detail"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:foregroundGravity="center"
                android:gravity="start|center"
                android:text="@string/memo"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="@+id/edt_memo_detail"
                app:layout_constraintEnd_toEndOf="@+id/txt_money"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_money" />

            <EditText
                android:id="@+id/edt_memo_detail"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:foregroundGravity="center"
                android:gravity="start|center"
                android:inputType="text"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/txt_memo_detail"
                app:layout_constraintTop_toBottomOf="@+id/edt_money_detail" />

            <FrameLayout
                android:id="@+id/focus_view"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/txt_date_viewHolder_detail"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:foregroundGravity="center"
                android:gravity="start|center"
                android:text="@string/date"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="@id/txt_date_detail"
                app:layout_constraintEnd_toEndOf="@+id/txt_money"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_memo_detail" />

            <EditText
                android:id="@+id/txt_time_detail"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/txt_date_detail"
                app:layout_constraintTop_toBottomOf="@id/edt_memo_detail"
                tools:text="4:30 PM" />

            <EditText
                android:id="@+id/txt_date_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_constraintEnd_toStartOf="@id/txt_time_detail"
                app:layout_constraintStart_toEndOf="@+id/txt_date_viewHolder_detail"
                app:layout_constraintTop_toBottomOf="@id/edt_memo_detail"
                tools:text="1/3/21 (Fri)" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
    </ScrollView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:id="@+id/fake_txt"/>
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_submitChanges"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:layout_gravity="end|bottom"
        android:layout_margin="16dp"
        android:contentDescription="syep"
        app:srcCompat="@drawable/ic_check_green_24dp" />
</LinearLayout>